<resources>
    <string name="app_name">DM2_JUEGO-DEL-AJEDREZ</string>
    <string name="logros">Logros</string>
    <string name="skins">Skins</string>
    <string name="historial">Historial</string>
    <string name="ajustes">Ajustes</string>
    <string name="add">Add</string>
    <string name="use">Use</string>
    <string name="profile" />
    <string name="perfiles">Perfiles</string>
    <string name="puntos">Puntos:</string>
    <string name="nombre">Nombre:</string>
    <string name="foto">Foto:</string>
    <string name="ver_informacion">Ver Informacion</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="usar">Usar</string>
    <string name="friends">Amigos</string>
    <string name="añadir_amigo">Añadir amigo</string>
    <string name="eliminar_amigo">Eliminar amigo</string>
    <string name="piece_skins">Piece Skins</string>
    <string name="board_skins">Board Skins</string>
    <string name="show">Ver</string>
    <string name="show_all_histories">Mostrar todos los historiales</string>
</resources>